@@ -1,7 +1,7 @@
 # File format:
 # Three lines for Pause Key, Exit Key, Abort Key
-# 9 lines for player 1, 9 lines for player 2 in the following order:
-# Left, Right, Up, Down, Button 1, Button 2, Button 3, 
+# 10 lines for player 1, 10 lines for player 2 in the following order:
+# Left, Right, Up, Down, Button 1, Button 2, Button 3, Button 4,
 # Left Shift, Right Shift
 #
 # Each player's key listing can begin with an optional joystick declaration
@@ -42,6 +42,7 @@
 "Enter"
 " "
 "RCtrl"
+"Esc"
 "LShift"
 "RShift"
 #
@@ -55,6 +56,7 @@
 #"Enter" <Joy-B0>
 #" " <Joy-B1>
 #"RCtrl" <Joy-C0,1>
+#"Esc"
 #"LShift"
 #"RShift"
 #
@@ -68,6 +70,7 @@
 #"Enter" <Joy-B2>
 #" " <Joy-B3>
 #"RCtrl" <Joy-B4>
+#"Esc"
 #"LShift" <Joy-B0>
 #"RShift" <Joy-B1>
 #
@@ -80,5 +83,6 @@
 "w"
 "q"
 "a"
+""
 ""
 ""
